# ci_cd_apache_spark_ap

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  format.yaml  release.yaml
demo/: Analityka_Spark (1) (1).ipynb  hello.py  intro_pyspark.ipynb  start.ipynb
src/us_accidents_etl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/us_accidents_etl/load/: writer.py
